--- a/src/main/resources/templates/feed.html
+++ b/src/main/resources/templates/feed.html
@@ -16,10 +16,13 @@
 
 <body>
 <div class="container">
+    <div th:replace="fragments/navbar"></div>
     <h2>Tweets</h2>
     <div th:each="tweet:${tweetList}">
         <h5>@<span th:text="${tweet.user.username}"></span>
-            <small><span th:text="${#dates.format(tweet.createdAt, 'M/d/yy')}"></span></small></h5>
+<!--            <small><span th:text="${#dates.format(tweet.createdAt, 'M/d/yy')}"></span></small>-->
+            <small th:text="${tweet.date}"></small>
+        </h5>
         <p th:utext="${tweet.message}"></p>
     </div>
 </div>
