--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -15,22 +15,19 @@
 </head>
 
 <body>
-<div class="container">
-    <div class="jumbotron col-md-8 col-md-offset-2">
-        <h2>New Tweet</h2><br/>
-        <form th:action="@{/tweets}" th:object="${tweet}" method="post" autocomplete="off">
-            <div class="form-group">
-                <textarea rows="5" th:field="*{message}" placeholder="What's happening?" class="form-control"></textarea>
-                <label th:if="${#fields.hasErrors('message')}" th:errors="*{message}" class="validation-message"></label>
+    <div class="container">
+        <div th:replace="fragments/navbar"></div>
+        <h2>Welcome!</h2>
+        <form th:action="@{/login}" method="post"><br/>
+            <input type="text" id="username" name="username" th:placeholder="Username" class="form-control"/> <br/>
+            <input type="password" th:placeholder="Password" id="password" name="password" class="form-control"/> <br/>
+            <div align="center" th:if="${param.error}">
+                <h4 style="color: red">Login unsuccessful.</h4>
             </div>
-            <div class="form-group">
-                <button class="btn btn-md btn-success btn-block" name="Submit" value="Submit" type="Submit">Tweet it!</button>
-            </div>
+            <button class="btn btn-md btn-success btn-block" name="Submit" value="Login" type="Submit">Log in</button>
         </form>
-        <div th:if="${successMessage}">
-            <h3><span class="text-success" th:utext="${successMessage}"></span></h3>
-        </div>
     </div>
-</div>
+
 </body>
+
 </html>
