--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -1,4 +1,12 @@
 <!--<div th:fragment="navbar" xmlns:th="http://www.thymeleaf.org>-->
+<html xmlns:th="http://www.thymeleaf.org"
+xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
+<head>
+
+</head>
+
+<body>
+<div th:fragment="navbar"></div>
 <nav class="row navbar navbar-inverse">
     <div class="container-fluid">
         <div class="navbar-header">
@@ -19,4 +27,6 @@
         </div>
     </div>
 </nav>
+</body>
 <!--</div>-->
+</html>
