--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -5,19 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Log in</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css">
-    <link rel="stylesheet" href="/custom.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script src="/custom.js"></script>
+    <title id="title">User Feed</title>
+
+    <div th:replace="/fragments/headlinks :: headlinks” ></div>
 </head>
 
 <body>
     <div th:replace="fragments/navbar"></div>
     <div class="container">
-
         <h2>Profile for <span th:text="${user.firstName}"></span>
             <span th:text="${user.lastName}"></span> -
             <span style="color: #00aced">
