--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -8,16 +8,11 @@
     <title>Users</title>
 
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css">
-    <link rel="stylesheet" href="/custom.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script src="/custom.js"></script>
+    <div th:replace="/fragments/headlinks :: headlinks” ></div>
 </head>
 
 <body>
-    <div class="container-fluid">
+    <div class="container-fluid"></div>
     <div th:replace="fragments/navbar"></div>
     <div class="container">
         <h2>Users</h2>
@@ -28,7 +23,22 @@
             <h5 class="mb-1" style="color: #00aced"><i class="fab fa-twitter"></i> @<span th:text="${user.username}"></span></h5>
             <h5 class="mb-1"><span th:text="${user.firstName}"></span> <span th:text="${user.lastName}"></span></h5>
         </div>
-                <div class="col col-sm-2 col-sm-offset-4 text-right">
+
+
+                <ul class="nav nav-tabs">
+                    <li role="presentation" th:classappend="${filter == 'all' ? 'active' : '' }">
+                        <a href="/users">All</a></li>
+                    <li role="presentation" th:classappend="${filter == 'followers' ? 'active' : '' }">
+                        <a href="/users?filter=followers">Followers</a></li>
+                    <li role="presentation" th:classappend="${filter == 'following' ? 'active' : '' }">
+                        <a href="/users?filter=following">Following</a></li>
+                </ul><br/>
+                <div th:if="${#lists.isEmpty(users) and filter == 'followers'}"><center><h3>You don't have any followers</h3></center></div>
+                <div th:if="${#lists.isEmpty(users) and filter == 'following'}"><center><h3>You're not following anyone</h3></center></div>
+
+
+
+                    <div class="col col-sm-2 col-sm-offset-4 text-right">
                     <h5 class="mb-1"><span th:text="${tweetCounts.get(user.username)}"></span> tweets</h5>
 
                     <form th:action="@{/follow/} + ${user.username}" th:if="${followingStatus.containsKey(user.username)
